<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdo_grp_content_panel"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_main_body"
            android:text="@string/rdo_main_body"
            android:background="@drawable/selector_content_main_body"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_comments"
            android:text="@string/rdo_comments"
            android:background="@drawable/selector_content_comments"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_translation"
            android:text="@string/rdo_translation"
            android:background="@drawable/selector_content_translation"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_appreciation"
            android:text="@string/rdo_appreciation"
            android:background="@drawable/selector_content_appreciation"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_author"
            android:text="@string/rdo_author"
            android:background="@drawable/selector_content_author"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tv_passage_carrier"
        android:layout_alignParentTop="true"
        android:layout_above="@id/rdo_grp_content_panel"/>
</RelativeLayout>