<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_label_name_custom"
        android:textSize="@dimen/size_text_title_small"/>
    <include layout="@layout/et_general"
        android:id="@+id/et_name_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_pattern"
        android:textSize="@dimen/size_text_title_small"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spn_memory_pattern"
        android:dropDownVerticalOffset="@dimen/spinner_dropdown_vertical"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_cycle"
        android:textSize="@dimen/size_text_title_small"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_memory_cycle"
        android:textSize="@dimen/size_text_dialog"/>
</merge>