<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_recite_name_label"
        android:text="@string/tv_recite_name_label"
        android:textSize="@dimen/size_text_title_small"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_recite_name_content"
        android:textSize="@dimen/size_text_dialog"
        android:gravity="center_horizontal"
        android:drawableRight="@drawable/ic_modify_custom_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_expect_recite_time_label"
        android:text="@string/tv_expect_recite_time_label"
        android:textSize="@dimen/size_text_title_small" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_expect_recite_time_content"
        android:textSize="@dimen/size_text_dialog"
        android:gravity="center_horizontal"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_recite_result"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_remembered"
            android:text="@string/rdo_remembered"
            android:textSize="@dimen/size_text_dialog"
            android:drawableLeft="@drawable/selector_rdo_general"
            android:checked="true"
            android:button="@null"
            android:background="@null"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_unremembered"
            android:text="@string/rdo_unremembered"
            android:textSize="@dimen/size_text_dialog"
            android:drawableLeft="@drawable/selector_rdo_general"
            android:button="@null"
            android:background="@null"/>
    </RadioGroup>
</merge>