<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_passage_auxiliary"
        android:layout_alignParentTop="true">
        <ImageButton
            android:layout_width="@dimen/size_image_small"
            android:layout_height="@dimen/size_image_small"
            android:id="@+id/ib_set_experience"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/margin_mid_vertical"
            android:layout_marginLeft="@dimen/margin_mid_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_set_experience"
            android:background="@android:color/transparent" />
        <ImageButton
            android:layout_width="@dimen/size_image_small"
            android:layout_height="@dimen/size_image_small"
            android:id="@+id/ib_history_record"
            android:layout_toRightOf="@id/ib_set_experience"
            android:layout_marginTop="@dimen/margin_mid_vertical"
            android:layout_marginLeft="@dimen/margin_small_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_history_record"
            android:background="@android:color/transparent" />
        <ImageButton
            android:layout_width="@dimen/size_image_middle"
            android:layout_height="@dimen/size_image_middle"
            android:id="@+id/ib_auxiliary_function"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_mid_vertical"
            android:layout_marginRight="@dimen/margin_mid_horizontal"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ib_history_record"
            android:layout_toLeftOf="@id/ib_auxiliary_function"
            android:id="@+id/tv_memory_situation"
            android:gravity="center"
            android:visibility="gone"/>
    </RelativeLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdo_grp_content_panel"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_main_body"
            android:text="@string/rdo_main_body"
            android:drawableTop="@drawable/selector_content_main_body"
            android:button="@null"
            android:textAlignment="center"
            android:background="@null"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_comments"
            android:text="@string/rdo_comments"
            android:drawableTop="@drawable/selector_content_comments"
            android:button="@null"
            android:checked="false"
            android:textAlignment="center"
            android:background="@null"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_translation"
            android:text="@string/rdo_translation"
            android:drawableTop="@drawable/selector_content_translation"
            android:button="@null"
            android:checked="false"
            android:textAlignment="center"
            android:background="@null"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_appreciation"
            android:text="@string/rdo_appreciation"
            android:drawableTop="@drawable/selector_content_appreciation"
            android:button="@null"
            android:checked="false"
            android:textAlignment="center"
            android:background="@null"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_author"
            android:text="@string/rdo_author"
            android:drawableTop="@drawable/selector_content_author"
            android:button="@null"
            android:checked="false"
            android:textAlignment="center"
            android:background="@null"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_experience"
            android:text="@string/rdo_experience"
            android:drawableTop="@drawable/selector_content_experience"
            android:button="@null"
            android:checked="false"
            android:textAlignment="center"
            android:background="@null"/>
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sv_passage_carrier"
        android:scrollbars="none"
        android:requiresFadingEdge="vertical"
        android:padding="@dimen/padding_small"
        android:layout_above="@id/rdo_grp_content_panel"
        android:layout_below="@id/rl_passage_auxiliary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_passage_header"
                android:textSize="@dimen/size_text_title_big"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:lines="5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_passage_content"
                android:textSize="@dimen/size_text_activity"
                android:lineSpacingMultiplier="1.5" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>