<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg_main_activity"
    android:padding="@dimen/padding_mid"
    tools:context="com.cjq.tool.memorytour.ui.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/padding_mid">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_vertical_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_reciting_book"
                    android:textSize="@dimen/size_text_title_middle"
                    android:layout_gravity="center_vertical"/>
                <ImageButton
                    android:layout_width="@dimen/size_image_micro"
                    android:layout_height="@dimen/size_image_micro"
                    android:id="@+id/ib_reciting_book"
                    android:background="@drawable/ic_button_modify"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_vertical_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_intraday_reciting"
                    android:textSize="@dimen/size_text_title_middle"
                    android:layout_gravity="center_vertical"/>
                <ImageButton
                    android:layout_width="@dimen/size_image_micro"
                    android:layout_height="@dimen/size_image_micro"
                    android:id="@+id/ib_intraday_reciting"
                    android:background="@drawable/ic_button_modify"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_intraday_reviewing"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                android:textSize="@dimen/size_text_title_middle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_total_reviewing"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                android:textSize="@dimen/size_text_title_middle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_total_not_recite"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                android:textSize="@dimen/size_text_title_middle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_total_recited"
                android:textSize="@dimen/size_text_title_middle"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start_memory_tour"
            android:text="@string/btn_start_memory_tour"
            android:textSize="@dimen/size_text_title_large"
            android:layout_centerInParent="true"
            android:padding="@dimen/padding_mid"
            android:background="@drawable/ic_bg_start_memory_tour"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_library"
            android:text="@string/tv_library"
            android:textSize="@dimen/size_text_view_label"
            android:gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:drawableTop="@drawable/ic_library"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_setting"
            android:text="@string/setting"
            android:textSize="@dimen/size_text_view_label"
            android:gravity="center_horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:drawableTop="@drawable/ic_bg_special_function_selected"/>
    </RelativeLayout>
</LinearLayout>
